--- a/rust/section1/project1/Cargo.toml
+++ b/rust/section1/project1/Cargo.toml
@@ -7,4 +7,8 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dev-dependencies]
+assert_cmd = "0.11.0"
+predicates = "1.0.0"
+
 [dependencies]
