--- a/rust/section2/project3/Cargo.toml
+++ b/rust/section2/project3/Cargo.toml
@@ -9,11 +9,12 @@ edition = "2018"
 
 [dev-dependencies]
 assert_cmd = "0.11"
-criterion = "0.2.11"
+criterion = "0.3.1"
 predicates = "1.0.0"
-rand = "0.6.5"
+rand = "0.7.3"
 tempfile = "3.0.7"
 walkdir = "2.2.7"
+rand_chacha = "0.2.1"
 
 [dependencies]
 clap = "2.33.0"
@@ -25,3 +26,7 @@ log = "0.4.8"
 env_logger = "0.7.1"
 bincode = "1.2.1"
 sled = "0.31.0"
+
+[[bench]]
+name = "engine_benches"
+harness = false
