--- a/rust/section2/project3/Cargo.toml
+++ b/rust/section2/project3/Cargo.toml
@@ -21,11 +21,11 @@ clap = "2.33.0"
 structopt = "0.3.9"
 failure = "0.1.6"
 serde = "1.0.104"
-serde_json = "1.0.45"
 log = "0.4.8"
 env_logger = "0.7.1"
 bincode = "1.2.1"
 sled = "0.31.0"
+serde_cbor = "0.11.1"
 
 [[bench]]
 name = "engine_benches"
